ActiveVOS 9.x deployer Sonar bug hunting and tidying up